<resources>
    <string name="app_name">MyVoca</string>
    <string name="app_name_debug">MyVoca.debug</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Thinking Face</string>
    <string name="nav_header_subtitle">mwy3055@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="quiz_screen_title">MyQuiz</string>

    <!-- format
            xml file name - view id(name)
    -->

    <!-- for notification -->
    <string name="notification_get_random">다른 단어</string>

    <!-- for menu/activity_main_drawer -->
    <string name="menu_main">하나씩 보기</string>
    <string name="menu_show_all">모두 보기</string>
    <string name="menu_quiz">단어 퀴즈</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_category_communicate">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="menu_go_github">소스 코드 보기</string>

    <!-- for layout/app_bar_main -->
    <string name="app_bar_main_description_fab">단어 추가 화면으로 이동하는 버튼입니다.</string>

    <!-- for layout/fragment_home -->
    <string name="home_fragment_no_voca">단어를 추가해 주세요</string>
    <string name="home_fragment_load_button">다른 단어 보이기</string>
    <string name="home_fragment_word_count">%d개</string>
    <string name="home_fragment_description">
        홈 화면입니다. 이곳에서는 무작위 단어를 보여줍니다.
    </string>
    <string name="home_fragment_description_button">버튼을 누르면 새로운 단어가 보입니다.</string>
    <string name="home_fragment_description_empty">
        현재 추가된 단어가 없습니다. 단어를 추가하여 새로운 단어를 보이게 해 보세요.
    </string>

    <!-- for layout/fragment_see_all -->
    <string name="see_all_fragment_number_word_text">단어 수</string>
    <string name="see_all_fragment_number_word">0</string>
    <string name="see_all_fragment_number_word_gae">개</string>
    <string name="see_all_fragment_delete">삭제</string>
    <string name="see_all_fragment_cancel">취소</string>
    <string name="see_all_fragment_spinner_prompt">정렬 방법</string>

    <!-- for layout/fragment_quiz -->
    <string name="quiz_no_vocabulary">퀴즈를 풀기 위해서는 단어를 5개 이상 등록해야 합니다.</string>
    <string name="current_voca_count">현재 등록된 단어: %d개</string>
    <string name="quiz_word_example">keyword</string>
    <string name="quiz_option_example">잠을 자다</string>
    <string name="quiz_option_no_text">오류: %s의 뜻이 없습니다.</string>

    <!-- for layout/fragment_go_github -->
    <string name="go_github_fragment_button_text">GitHub 이동</string>
    <string name="go_github_fragment_description">
        애플리케이션의 코드가 저장되어 있는 GitHub 리포지토리로 이동합니다.
        버그 및 개선 사항 등을 등록할 수도 있습니다.
    </string>
    <string name="go_github_fragment_description_button">버튼을 누르면 GitHub로 이동합니다.</string>

    <!-- for layout/toolbar_search_view -->
    <string name="toolbar_search_view_search_button">단어 검색하기</string>
    <string name="toolbar_search_view_description_clear">지우기</string>
    <string name="toolbar_search_view_description_submit">검색</string>
    <string name="toolbar_search_view_description_voice">음성으로 검색</string>

    <!-- for layout/activity_add_voca -->
    <string name="add_voca_activity_toolbar_title">단어 추가하기</string>
    <string name="add_voca_activity_eng_helper_text">단어</string>
    <string name="add_voca_activity_kor_helper_text">단어 뜻</string>
    <string name="add_voca_activity_memo_helper_text">메모</string>
    <string name="add_voca_activity_ok_button_text">추가</string>
    <string name="add_voca_activity_cancel_button_text">취소</string>
    <string name="add_voca_activity_description">
        새로운 단어를 추가하는 화면입니다. 영어 단어와 단어의 뜻을 입력해야 하며, 필요하다면 메모를 입력할 수 있습니다.
        단어를 입력한 후 추가 버튼을 눌러 단어를 추가하세요.
    </string>

    <!-- for layout/activity_edit_voca -->
    <string name="edit_voca_activity_toolbar_title">단어 수정하기</string>
    <string name="edit_voca_activity_eng_helper_text">단어</string>
    <string name="edit_voca_activity_kor_helper_text">단어 뜻</string>
    <string name="edit_voca_activity_memo_helper_text">메모</string>
    <string name="edit_voca_activity_ok_button_text">수정</string>
    <string name="edit_voca_activity_cancel_button_text">취소</string>
    <string name="edit_voca_activity_description">
        단어를 수정하는 화면입니다. 단어와 뜻, 메모 모두를 수정할 수 있습니다.
        수정 사항을 모두 입력한 후 수정 버튼을 눌러 단어를 수정하세요.
    </string>

    <!-- for menu/main -->
    <string name="main_search_item">단어 검색</string>

    <!-- for xml/searchable -->
    <string name="searchable_search_voca_hint">단어 입력</string>

    <!-- for layout/activity_widget_setting -->
    <string name="widget_setting_activity_message">위젯이 추가되었습니다.</string>
    <string name="widget_setting_activity_description_select">위젯의 텍스트 색깔을 선택한다.</string>
    <string name="widget_setting_activity_description">
        위젯을 설정하는 화면입니다. 위젯에 보일 텍스트의 색깔을 정해야 합니다. 기본값은 검은색입니다.
        색깔을 선택한 후 완료 버튼을 누르면 위젯이 추가됩니다.
    </string>
    <string name="widget_setting_activity_description_button">완료 버튼을 눌러 위젯을 추가하세요.</string>
    <string name="widget_setting_activity_description_progress">위젯을 추가하는 중입니다.</string>
    <string name="widget_setting_activity_description_complete">위젯을 추가하였습니다.</string>

    <!-- for layout/widget_layout -->
    <string name="widget_layout_show_voca">다른 단어</string>
    <string name="zero">0</string>
    <string name="word_english">word</string>
    <string name="word_korean">단어</string>
    <string name="close">닫기</string>
    <string name="choose_text_color">위젯의 텍스트 색깔을 선택해 주세요.</string>
    <string name="complete">완료</string>

    <!-- for settings -->
    <string name="settings">설정</string>
    <string name="settings_dark_mode">dark_mode</string>
    <string name="settings_feedback">feedback</string>
    <string name="dev_email">mwy3055@gmail.com</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_add_word">AddWordActivity</string>
    <string name="login_activity">LoginActivity</string>
    <string name="web_client_id">711192236974-vbjufot9iln0ttfnu44l7ai69l0dlljp.apps.googleusercontent.com</string>

    <!--    for home screen-->
    <string name="please_register_the_word_first">먼저 단어를 등록해 주세요.</string>
    <string name="refresh_today_word">오늘의 단어 새로고침하기</string>
    <string name="last_updated">마지막 업데이트: %1$s</string>
    <string name="what_is_today_word">오늘의 단어란?</string>
    <string name="today_word">오늘의 단어</string>
    <string name="no_registerd_word">등록된 단어가\n없습니다</string>
    <string name="words_are_registed">%1$s개의 단어가\n등록되어 있어요</string>
    <string name="memorize_new_words_everyday_words_are_updated_everyday">매일매일 새로운 단어를 외워 보세요. 단어는 하루마다 갱신됩니다.</string>
    <string name="memorized_words_can_be_separated_by_a_check_mark">외운 단어는 체크 표시로 구분할 수 있습니다.</string>
    <string name="check">확인</string>

    <!--    for all word screen-->
    <string name="word">단어</string>
    <string name="delete_word_complete">%1$s를 삭제했습니다.</string>
    <string name="initialize_search_options">검색 옵션을 초기화합니다.</string>
    <string name="initialization">초기화</string>다
    <string name="search_for_word_that_matchs_particular_condition">특정 조건에 맞는 단어를 검색합니다.</string>
    <string name="search_options">검색</string>
    <string name="set_search_options">검색 옵션을 설정합니다.</string>
    <string name="search">검색</string>
    <string name="selected">%1$s 선택됨</string>
    <string name="update_the_word">단어 %1$s를 수정합니다.</string>
    <string name="delete_the_word">단어 %1$s를 삭제합니다.</string>
    <string name="go_to_the_top_of_the_list">목록의 맨 위로 이동합니다.</string>
    <string name="undo">실행 취소</string>

    <!--    for add word screen-->
    <string name="add_word">단어 추가</string>
    <string name="update_word">단어 수정</string>
    <string name="save">저장</string>
    <string name="required_inputs">필수 입력사항</string>
    <string name="selective_inputs">선택 입력사항</string>
    <string name="input_title">단어를 입력하세요.</string>
    <string name="this_word_has_already_been_registerd">등록된 단어입니다.</string>
    <string name="add_icon_description">Add Icon Description</string>
    <string name="please_add_a_meaning">뜻을 추가해 보세요</string>
    <string name="delete_the_meaning">%1$s 뜻을 삭제합니다.</string>
    <string name="this_meaning_has_already_been_registerd">중복된 뜻이 있습니다.</string>
    <string name="memo">메모</string>
    <string name="clear_english_text">영어 텍스트를 지웁니다.</string>
    <string name="close_the_screen">화면을 닫습니다.</string>
    <string name="search_for_word">단어를 검색합니다.</string>
    <string name="index_meaning_type_korean">%1$s. %2$s</string>
    <string name="web_view_url">https://dict.naver.com/dict.search?query=%1$s</string>
    <string name="status_icon_description">Status Icon Description</string>

    <!--    for profile screen-->
    <string name="unknown_name">알 수 없는 이름입니다.</string>
    <string name="unknown_email">알 수 없는 이메일입니다.</string>
    <string name="you_are_not_logged_in_yet">아직 로그인되지 않았습니다.</string>
    <string name="profile_image">프로필 이미지</string>
    <string name="logout">로그아웃</string>
    <string name="login">로그인하기</string>
    <string name="back_up_your_words">단어 백업하기</string>
    <string name="do_you_warnt_to_back_up_the_words">단어를 백업하시겠습니까?</string>
    <string name="words_are_backed_up_to_the_cloud_and_can_be_imported_into_the_app_at_any_time">단어는 클라우드에 백업되며, 언제든지 앱으로 가져올 수 있습니다.</string>
    <string name="cancellation">취소</string>
    <string name="restore_words">단어 복원하기</string>
    <string name="would_you_like_to_restore_the_word">단어를 복원하시겠습니까?</string>
    <string name="restore_data_from_the_cloud_to_your_device">클라우드의 데이터를 기기로 복원합니다.</string>
    <string name="back_up_word">단어 백업하기</string>
    <string name="restore_word">단어 복원하기</string>

    <!--    for quiz screen-->
    <string name="need_more_words">퀴즈를 풀기 위해서는\n단어를 %1$s개 더 등록해야 합니다.</string>
    <string name="click_to_add_word">클릭하여 단어를 추가합니다.</string>
    <string name="go_to_add_word">단어 등록하기</string>
    <string name="correct">맞았습니다!!</string>
    <string name="incorrect">틀렸습니다</string>
    <string name="total_words_count">총 단어: %1$s개</string>
    <string name="search_results_count">검색 결과: %1$s개</string>

    <!--    for components -->
    <string name="you_can_add_new_word">새로운 단어를 추가할 수 있습니다.</string>
    <string name="add_word_complete">%1$s를 추가했습니다.</string>
    <string name="update_word_complete">%1$s를 수정했습니다.</string>
    <string name="no_search_results">검색 결과가 없습니다.</string>
</resources>
