<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/nav_see_all"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_show_all" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_quiz" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="@string/menu_category_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_go_github"
                android:icon="@drawable/ic_menu_go_blog"
                android:title="@string/menu_go_github" />
        </menu>
    </item>

</menu>
