<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_foreground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_small"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/widget_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/widget_eng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/word_english"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/widget_kor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/word_korean"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:textSize="13sp" />
    </LinearLayout>

    <Button
        android:id="@+id/widget_voca_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/widget_layout_show_voca" />
</LinearLayout>
