<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="hsk.practice.myvoca.ui.seeall.SeeAllViewModel" />

    </data>

    <LinearLayout
        android:id="@+id/layout_see_all"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="25dp"
                android:paddingEnd="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/maplestory_light"
                    android:text="@string/see_all_fragment_number_word_text"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_voca_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/maplestory_light"
                        android:text="@string/see_all_fragment_number_word"
                        android:textSize="28sp"
                        app:vocaNumber="@{viewModel.currentVocabulary}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/maplestory_light"
                        android:text="@string/see_all_fragment_number_word_gae"
                        android:textSize="28sp" />

                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/see_all_fragment_spinner_prompt"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:background="@drawable/spinner_background"
                android:spinnerMode="dialog"
                android:theme="@style/SpinnerTheme" />

        </LinearLayout>

        <ImageView
            android:id="@+id/horizontal_divider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@android:color/darker_gray" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_voca"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:fastScrollEnabled="true"
            app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
            app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
            app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
            app:fastScrollVerticalTrackDrawable="@drawable/line_drawable">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/layout_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/add_button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/see_all_fragment_cancel" />

            <Button
                android:id="@+id/button_delete_vocabulary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/see_all_fragment_delete"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>
</layout>