<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingEnd="8dp">

        <!-- This is actually used for the badge icon *or* the badge label (or neither) -->
        <TextView
            android:id="@+id/search_badge"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:drawablePadding="0dp"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/divider_color"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/search_button"
            style="?attr/actionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/toolbar_search_view_search_button"
            android:focusable="true" />

        <LinearLayout
            android:id="@+id/search_edit_frame"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layoutDirection="locale"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/search_mag_icon"
                style="@style/RtlOverlay.Widget.AppCompat.SearchView.MagIcon"
                android:layout_width="@dimen/abc_dropdownitem_icon_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:scaleType="centerInside"
                android:visibility="visible" />

            <!-- Inner layout contains the app icon, button(s) and EditText -->
            <LinearLayout
                android:id="@+id/search_plate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_src_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/item_list_horizontal_margin"
                    android:layout_marginEnd="@dimen/item_list_horizontal_margin"
                    android:layout_weight="1"
                    android:dropDownHeight="wrap_content"
                    android:dropDownHorizontalOffset="0dp"
                    android:dropDownVerticalOffset="0dp"
                    android:ellipsize="end"
                    android:imeOptions="actionSearch"
                    android:inputType="text|textAutoComplete|textNoSuggestions"
                    android:maxLines="1"
                    android:paddingEnd="8dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/material_light_hint_text"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/search_close_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/toolbar_search_view_description_clear"
                    android:focusable="true"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/submit_area"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/search_go_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/toolbar_search_view_description_submit"
                    android:focusable="true"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/search_voice_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/toolbar_search_view_description_voice"
                    android:focusable="true"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>